# NerFW

./: .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  Dockerfile  Documentation.dockerfile  README.md  build.dockerfile  docker-compose.integration.yml  docker-compose.selenium.yml  docker-compose.yml  main.py  pyproject.toml  qodana.yaml
.devcontainer/: conftest.py  devcontainer.json
.github/workflows/: Checks.yml  build.yml  qodana_code_quality.yml  test_coverage.yml
docs/: conf.py  index.rst  modules.rst  nerfw.game.rst  nerfw.helpers.errors.rst  nerfw.helpers.rst  nerfw.rst  nerfw.server.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  nerfw.doctree  nerfw.game.doctree  nerfw.helpers.doctree  nerfw.helpers.errors.doctree  nerfw.server.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  nerfw.game.html  nerfw.helpers.errors.html  nerfw.helpers.html  nerfw.html  nerfw.server.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/tutorials/: campaign.rst  installation.md  setting_server.md  whats_next.md
docs/tutorials/game_script_tutorial/: campaign_tutorial.rst  character.md  game.md  general.md
docs/tutorials/login_methods/: default_login.md  github_login.md  login_methods.rst  patreon_login.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/gallery/: gallery.css  gallery.js  imageSelected.js
frontend/src/game/: audio.js  audioGroup.js  character.js  choice.js  choices.css  dialogue_menu.css  game.css  game.js  get_scene.js  handle_forward_click.js  stringInput.css  stringInput.js
frontend/src/home/: home.css  home.js
frontend/src/login/: login.css  login.js  loginDefault.js  loginGithub.css  loginGithub.js  loginPatreon.css  loginPatreon.js  unauthenticated.css  unauthenticated.js
frontend/src/register/: register.js
frontend/src/routing/: route_guard.js  routes.js
frontend/src/saves/: create_pairs.js  load_game.css  render_background.js  save_button.js  saves.js  saves_stacks.css
frontend/src/stylesheets/: index.css
nerfw/: __init__.py  nerfw.py
nerfw/game/: __init__.py  animation.py  audio.py  character.py  choice.py  game.py  recorder.py  scene.py  string_input.py  unlock_scene.py
nerfw/game/character_files/: character.py
nerfw/game/generator/: generator.py  script.py
nerfw/game/ui/: button.py  functions.py  ui.py
nerfw/helpers/: __init__.py  breaker.py  db_handler.py  deconstructor.py  img_handler.py  input_handler.py  logger.py  login_base.py  recorder.py
nerfw/helpers/errors/: character_not_found.py  function_not_found.py  password_mismatch.py  unsupported_login_method.py  user_already_registered.py  user_doesnt_exist.py  user_not_allowed.py  wrong_naming.py
nerfw/server/: Renderer.py  __init__.py  error_handler.py  gallery.py  login_default.py  login_github.py  login_handler.py  login_patreon.py  password_manager.py  renderer.py  require_token.py  saves_handler.py  server.py  token_handler.py  wrapper.py
nerfw/server/static/: backward.js  forward.js  save.js  script.js
nerfw/server/templates/: body.html  game.html  head.html  home.html  index.html  load_game.html  login.html  register.html  tail.html  test.html
nerfw/ui/: button.py  dialogue_menu.py  dialogue_window.py  functions.py  input_text.py  login_menu.py  main_menu.py  menus.py  register_menu.py  text_field.py  ui.py  ui_base.py
tests/: main.py
tests/game/: test_scene.py
tests/integration_testing/: Dockerfile  conftest.py  pytest.ini  run-locally.sh
tests/integration_testing/connection/: test_connection.py
tests/integration_testing/fixtures/: browser.py  logger.py
tests/integration_testing/game/: test_backward.py  test_forward.py
tests/integration_testing/login_register/: test_login_as_registered.py  test_login_unregistered.py  test_register_user.py
tests/unit_tests/game/: test_animation.py  test_audio.py  test_character.py  test_choice.py  test_game.py  test_scene.py  test_string_input.py  test_unlock_scene.py
tests/unit_tests/helpers/: test_breaker.py  test_db_handler.py  test_deconstructor.py  test_img_handler.py  test_input_handler.py  test_recorder.py
tests/unit_tests/server/: test_gallery.py  test_login_default.py  test_login_github.py  test_login_handler.py  test_login_patreon.py  test_password_manager.py  test_saves_handler.py  test_token_handler.py
(+55 files in other folders)
