[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfw"
authors = [
    {name = "Nergan", email = "noname.nosurname2016@yandex.ru"},
]
description = "Framework for creation of web based visual novels"
readme = "README.md"
version = "0.1"
requires-python = ">=3.10"
keywords = [
    "flask",
    "visual",
    "novel",
]
license = {text = "MIT"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dotenv",
    "flask",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "nerfw",
    "**/*.py",
]
exclude = [
    "test_files",
]
namespaces = false


[tool.setuptools.package-data]
nerfw = [
    "**/*.html",
    "**/*.css",
    "**/*.js",
]

dynamic = ["version"]
homepage = ["https://github.com/Nergan123/NerFW/tree/main"]
repository = ["https://github.com/Nergan123/NerFW/tree/main"]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
]
